--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 ---
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
-venue: "FIXME"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "FIXME"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
-country: "FIXME"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
-language: "FIXME"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: "FIXME"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
-humandate: "FIXME"    # human-readable date (e.g., "Feb 17-18, 2020")
-humantime: "FIXME"    # human-readable time (e.g., "9:00 am - 4:30 pm")
-startdate: FIXME      # use YYYY-MM-DD format like 2015-01-01
-enddate: FIXME        # use YYYY-MM-DD format like 2015-01-02
-instructor: ["FIXME"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+venue: "MARC, Plant and Food Research, NZ"        # brief name of host site without address (e.g., "Euphoric State University")
+address: "120 Mt Albert Road, Sandringham, Auckland 1025"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
+country: "New Zealand"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
+language: "en"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
+latlng: "-36.890812,174.725736"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
+humandate: "Apr 18-20, 2016"    # human-readable date (e.g., "Feb 17-18, 2020")
+humantime: "8.30am - 5pm"    # human-readable time (e.g., "9:00 am - 4:30 pm")
+startdate: 2016-04-18      # use YYYY-MM-DD format like 2015-01-01
+enddate: 2016-04-20        # use YYYY-MM-DD format like 2015-01-02
+instructor: ["Amali Thrimawithana", "Dan Jones"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["FIXME"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: "FIXME"      # contact email address for workshop organizer, such as "grace@hopper.org"
-etherpad:         # optional (insert the URL for your Etherpad if you're using one)
+contact: "amali.thrimawithana@plantandfood.co.nz"      # contact email address for workshop organizer, such as "grace@hopper.org"
+etherpad: https://public.etherpad-mozilla.org/p/pfr2016         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
 
