--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ humandate: "Apr 18-20, 2016"    # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: "8.30am - 5pm"    # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2016-04-18      # use YYYY-MM-DD format like 2015-01-01
 enddate: 2016-04-20        # use YYYY-MM-DD format like 2015-01-02
-instructor: ["Amali Thrimawithana", "Dan Jones"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["FIXME"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+instructor: ["Amali Thrimawithana","Ben Warren", "Cecilia Deng", "Dan Jones", "Kate Richards", "Lara Brian", "Lindy Guo", "Mark Wohlers","Peter McAtee", "Sarah Pilkington", "Tim Millar"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: ["Amali Thrimawithana","Ben Warren", "Cecilia Deng", "Dan Jones", "Kate Richards", "Lara Brian", "Lindy Guo", "Mark Wohlers", "Patrick Connolly","Peter McAtee", "Sarah Pilkington", "Tejas Sevak", "Tim Millar", "Vicky Fan"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "amali.thrimawithana@plantandfood.co.nz"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad: https://public.etherpad-mozilla.org/p/pfr2016         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
