--- a/index.html
+++ b/index.html
@@ -114,8 +114,11 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 -->
 <p id="requirements">
   <strong>Requirements:</strong> Participants must bring a laptop with a
-  Mac, Linux, or Windows operating sytem (not a tablet, Chromebook, etc.) that they have administrative privileges
-  on. They should have a few specific software packages installed (listed
+  Mac, Linux, or Windows operating sytem (not a tablet, Chromebook, etc.) -  unless you have already asked 
+  Amali to reserve a laptop for you. For the workshop we plan to use the softwares directly though our powerplant servers, 
+  so the only program you will need to have downloaded prior to the workshop is 
+  <a href=http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html> putty </a>. However if you like a local copy of the 
+  softwares installed, please follow the guidelines listed
   <a href="#setup">below</a>). They are also required to abide by
   Software Carpentry's
   <a href="{{site.swc_site}}/conduct.html">Code of Conduct</a>.
