--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
-venue: "MARC, Plant and Food Research, NZ"        # brief name of host site without address (e.g., "Euphoric State University")
+venue: "MARC, Plant and Food Research, Auckland"        # brief name of host site without address (e.g., "Euphoric State University")
 address: "120 Mt Albert Road, Sandringham, Auckland 1025"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
 country: "New Zealand"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
@@ -11,7 +11,7 @@ humantime: "8.30am - 5pm"    # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2016-04-18      # use YYYY-MM-DD format like 2015-01-01
 enddate: 2016-04-20        # use YYYY-MM-DD format like 2015-01-02
 instructor: ["Amali Thrimawithana","Ben Warren", "Cecilia Deng", "Dan Jones", "Kate Richards", "Lara Brian", "Lindy Guo", "Mark Wohlers","Peter McAtee", "Sarah Pilkington", "Tim Millar"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["Amali Thrimawithana","Ben Warren", "Cecilia Deng", "Dan Jones", "Kate Richards", "Lara Brian", "Lindy Guo", "Mark Wohlers", "Patrick Connolly","Peter McAtee", "Sarah Pilkington", "Tejas Sevak", "Tim Millar", "Vicky Fan"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+helper: ["Patrick Connolly", "Vicky Fan"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "amali.thrimawithana@plantandfood.co.nz"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad: https://public.etherpad-mozilla.org/p/pfr2016         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
