--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>08:30</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:00</td> <td>Coffee</td> </tr>
+      <tr> <td>10:00</td> <td>Morning tea</td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:30</td>  <td>Programming with R</td> </tr>
-      <tr> <td>15:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>15:00</td>  <td>Afternoon tea</td> </tr>
       <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
@@ -205,10 +205,10 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>08:30</td>  <td>Graphics and more in Rt</td> </tr>
-      <tr> <td>10:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>10:00</td>  <td>Morning tea</td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:30</td>  <td>Programming with Python</td> </tr>
-      <tr> <td>15:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>15:00</td>  <td>Afternoon tea</td> </tr>
       <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
@@ -216,10 +216,10 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
     <h3>Day 3</h3>
     <table class="table table-striped">
       <tr> <td>08:30</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>10:00</td>  <td>Morning tea</td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:30</td>  <td>RNASeq pipeline</td> </tr>
-      <tr> <td>15:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>15:00</td>  <td>Afternoon tea</td> </tr>
       <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
