--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
-venue: "MARC, Plant and Food Research, Auckland"        # brief name of host site without address (e.g., "Euphoric State University")
+venue: "NeSI - MARC, Plant and Food Research, Auckland"        # brief name of host site without address (e.g., "Euphoric State University")
 address: "120 Mt Albert Road, Sandringham, Auckland 1025"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
 country: "New Zealand"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
@@ -337,6 +337,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       <li><a href="{{site.swc_githubio}}/git-novice/reference.html">Reference...</a></li>
     </ul>
   </div>
+  <!---
   <div class="col-md-6">
     <h3 id="syllabus-sql">Managing Data with SQL</h3>
     <ul>
@@ -352,7 +353,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
     </ul>
   </div>
 </div>
-
+--->
 <hr/>
 
 <!--
