--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   Mac, Linux, or Windows operating sytem (not a tablet, Chromebook, etc.) -  unless you have already asked 
   Amali to reserve a laptop for you. For the workshop we plan to use the softwares directly though our powerplant servers, 
   so the only program you will need to have downloaded prior to the workshop is 
-  <a href=http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html> putty </a>m if you are on Windows. However if you like a local copy of the 
+  <a href=http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html> putty </a> if you are on Windows. Also it would be good 
+  if you have altertnate web browser to internet explorer such as chromoe/safari/firefox. If you like a local copy of all the 
   softwares installed, please follow the guidelines listed
   <a href="#setup">below</a>. They are also required to abide by
   Software Carpentry's
