minor addition on streams

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   Amali to reserve a laptop for you. For the workshop we plan to use the softwares directly though our powerplant servers, 
   so the only program you will need to have downloaded prior to the workshop is 
   <a href=http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html> putty </a> if you are on Windows. Also it would be good 
-  if you have altertnate web browser to internet explorer such as chromoe/safari/firefox. If you like a local copy of all the 
+  if you have an altertnate web browser to internet explorer such as chromoe/safari/firefox. If you like a local copy of all the 
   softwares installed, please follow the guidelines listed
   <a href="#setup">below</a>. They are also required to abide by
   Software Carpentry's
@@ -205,7 +205,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   <div class="col-md-4">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>08:30</td>  <td>Graphics and more in Rt</td> </tr>
+      <tr> <td>08:30</td>  <td>Graphics and more in R</td> </tr>
       <tr> <td>10:00</td>  <td>Morning tea</td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:30</td>  <td>Programming with Python</td> </tr>
@@ -226,6 +226,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   </div>
 </div>
 
+Note: Sessions on unix,R and Git will have two streams, running concurrently. 
 <!--
   ETHERPAD
 
