--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
 venue: "NeSI - MARC, Plant and Food Research, Auckland"        # brief name of host site without address (e.g., "Euphoric State University")
 address: "120 Mt Albert Road, Sandringham, Auckland 1025"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
-country: "New Zealand"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
+country: "nz"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "-36.890812,174.725736"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
 humandate: "Apr 18-20, 2016"    # human-readable date (e.g., "Feb 17-18, 2020")
